feature: create proxy, pin check and data masking